<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:ignore="Overdraw">

    <include
        android:id="@+id/setting_tool"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Switch
        android:id="@+id/sw_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_tool"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/SET_DAILY"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_dailydesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sw_daily"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/TIME_DAILY"
        android:textColor="@android:color/white" />

    <Switch
        android:id="@+id/sw_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dailydesc"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/RELEASE_SET"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sw_movie"
        android:layout_marginStart="16dp"
        android:text="@string/TIME_RELEASE"
        android:textColor="@android:color/white" />
</RelativeLayout>