<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorShade"
        tools:context=".Detail.DetailMovie">

        <include
            android:id="@+id/det_tool"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <ImageView
            android:id="@+id/bc_solid"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/colorgrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/det_tool" />


        <ImageView
            android:id="@+id/bc_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/det_tool" />

        <ImageView
            android:id="@+id/d_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/det_tool" />

        <TextView
            android:id="@+id/d_judul"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/d_photo"
            app:layout_constraintTop_toBottomOf="@+id/det_tool" />

        <RelativeLayout
            android:id="@+id/rv_over"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_gold_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bc_solid">

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/box_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/overview"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/d_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/overview"
                android:layout_margin="20dp"
                android:layout_marginTop="10dp"
                android:padding="7dp"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <com.github.ivbaranov.mfb.MaterialFavoriteButton
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                app:layout_anchorGravity="bottom|end"
                app:mfb_animate_favorite="true"
                app:mfb_favorite_image="@drawable/fav_black"
                app:mfb_not_favorite_image="@drawable/fav_icon"
                app:mfb_type="heart" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:paddingBottom="10dp"
            android:background="@drawable/box_button_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_over">

            <TextView
                android:id="@+id/contentdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/box_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/content_detail"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toEndOf="@id/contentdetail"
                android:layout_marginStart="50dp"
                android:id="@+id/starss"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_stars2_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:textSize="20sp"
                android:id="@+id/d_rates"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/starss"/>

            <TextView
                android:id="@+id/tgl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contentdetail"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/date_release"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/d_d_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contentdetail"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/tgl"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/languange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tgl"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-20dp"
                android:text="@string/languange"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/d_languange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/d_d_release"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/languange"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/languange"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/popularity"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/d_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/languange"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/popularity"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/popularity"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/vote_count"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/d_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/popularity"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/vote"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/box_trailer"
                android:text="@string/trailer"
                android:textColor="@android:color/white"
                android:textStyle="bold"
               android:layout_below="@id/vote"/>
        </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>